--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
- 
   "name": "crypto-arbitrage-bot",
   "description": "Arbitrage",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "node index.js"
   },
   "dependencies": {
     "axios": "^1.3.4",
